[NT] Correct high contrast colors on login page

--- a/app/Resources/views/redo/styles/colors.scss
+++ b/app/Resources/views/redo/styles/colors.scss
@@ -10,20 +10,20 @@ $lightish-blue: #4c89ba;
 $light-blue: #04acef;
 $red: #bc0000;
 
-$main-theme-color: $blue;
-$accents-color: $lightish-blue;
-$secondary-accents-color: $light-blue;
+$main-theme-color: $blue !default;
+$accents-color: $lightish-blue !default;
+$secondary-accents-color: $light-blue !default;
 
-$default-border-color: $light-grey;
+$default-border-color: $light-grey !default;
 
-$primary-text-color: $dark-grey;
-$secondary-text-color: $grey;
-$tertiary-text-color: $lightish-grey;
+$primary-text-color: $dark-grey !default;
+$secondary-text-color: $grey !default;
+$tertiary-text-color: $lightish-grey !default;
 
-$primary-background-color: white;
-$secondary-background-color: $blueish-grey;
-$tertiary-background-color: $light-grey;
-$quaternary-background-color: $very-light-grey;
+$primary-background-color: white !default;
+$secondary-background-color: $blueish-grey !default;
+$tertiary-background-color: $light-grey !default;
+$quaternary-background-color: $very-light-grey !default;
 
-$darkened-secondary-background-color: darken($secondary-background-color, 5);
-$darkened-tertiary-background-color: darken($tertiary-background-color, 5);
+$darkened-secondary-background-color: darken($secondary-background-color, 5) !default;
+$darkened-tertiary-background-color: darken($tertiary-background-color, 5) !default;
